# rust-genome-longread-count

./: Cargo.toml  README.md  kmeruniquefasta.txt  main.rs
src/: args.rs  main.rs
