[package]
name = "kmerorigin"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "crate for estimation of the origin of the kmers"
homepage = "https://github.com/codecreatede/rust-genome-longread-count"
repository = "https://github.com/codecreatede/rust-genome-longread-count"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
